less/tumblr.less
/* ... */
.touch .index-page {
}
@-webkit-keyframes caption-slide {
   from { bottom: -200px }
   to   { bottom: 0; }
}
@-moz-keyframes caption-slide {
   from { bottom: -200px }
   to   { bottom: 0; }
}
.no-touch .index-page {
    #posts .post {
        .caption.excerpt {
            background: #000;
            background: rgba(0,0,0,.7);
            position: absolute;
            bottom: -200px; left: 0;

            p {
                color: #fff;
            }
        }
        .post_info { display: none; }
        &:hover .caption.excerpt {
            -webkit-animation-name: caption-slide;
            -webkit-animation-duration: .25s;
            -moz-animation-name: caption-slide;
            -moz-animation-duration: .25s;
            bottom: 0;
        }
    }
}


// CLEARING FLOATS
#header:after, #container:after, .caption_and_post_info:after, #footer:after .buttons:after {
    content: "."; display: block; height: 0; clear: both; visibility: hidden;
}


// MEDIA QUERIES
@media (min-width: 1600px) {
    .index-page #posts .post { width: 19%; margin: .5%; }
    #container { min-height: 1100px; }
}
@media (min-width: 1400px) and (max-width: 1599px) {
    .index-page #posts .post { width: 23%; margin: 1%; }
}
@media (min-width: 1200px) and (max-width: 1399px) {
    .index-page #posts .post { width: 31%; margin: 1%; }
}
@media (min-width: 1200px) { }
@media (min-width: 980px) { }
@media (max-width: 979px) {
    #nav .site-links-2 { display: none; }
}
@media (min-width: 768px) { }
@media (max-width: 767px) {
    header { width: 200px; }
    #posts .post {
        .media { width: auto; float: none; }
        .caption_and_post_info.isphoto { width: auto; float: none; margin-top: 30px; }
        .caption_and_post_info.isphoto .cont,
        .caption_and_post_info.isphoto .post_info { margin-left: 0; }
        .wrap:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
    }
    #nav .site-links { margin-left: 20px; }
    .post .post_info.social {
        margin-bottom: 0;

        .facebook, .twitter { font-size: 13px; }
    }
    #blog_info { padding: 33px 20px 20px 20px; width: 160px; }
}
@media (max-width: 640px) {
    #container { display: block; }
    header, #post-wrap { display: block; width: auto; }
    header { border-bottom: 1px solid #fff; }
    #blog_info {
        padding: 55px 20px 20px 20px;
        position: static;
        width: auto;

        h1 {
            display: block;
            text-indent: -9999px;
            height: 31px;
            margin-bottom: 22px;
            background: url('/cook-your-cupboard/img/cook-your-cupboard-hd-sm.png') no-repeat;
        }
        .hdr-img { display: none; }
    }
}
@media (max-width: 480px) {
    #nav .site-links {
        li { display: none; }
        .npr { display: block; }
    }

    #blog_info h1 { font-size: 36px; }
    #posts { padding-left: 10px; padding-right: 10px; }
    #posts .post .wrap { padding: 15px; }
    #project-form {
        .hdr { height: 64px; }
        .hdr h3 { font-size: 15px; line-height: 40px; padding-top: 13px; }
        .hdr h3 span { width: 64px; height: 64px; margin-right: 15px; background-position: 50% 50%; margin-top: -13px; background-image: url('http://apps.npr.org/familymeal/img/btn-share-small.png'); }
        .project-iframe { height: 770px; }
    }
    #footer { padding-left: 10px; margin-left: 0; margin-right: 0; }
    .index-page {
        #posts .post {
            width: auto;
            margin: 0 0 20px 0;
            float: none;
        }
    }
}

